NetBSD Problem Report #41202

From yamt@mwd.biglobe.ne.jp  Mon Apr 13 23:32:37 2009
Return-Path: <yamt@mwd.biglobe.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id D379F63BD8A
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 13 Apr 2009 23:32:37 +0000 (UTC)
Message-Id: <20090413232918.45C4A97EF8@kaeru.lan>
Date: Tue, 14 Apr 2009 08:29:18 +0900 (JST)
From: yamt@mwd.biglobe.ne.jp
Reply-To: yamt@mwd.biglobe.ne.jp
To: gnats-bugs@gnats.NetBSD.org
Subject: sysctl_rtable lockup
X-Send-Pr-Version: 3.95

>Number:         41202
>Category:       kern
>Synopsis:       sysctl_rtable lockup
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Apr 13 23:35:00 +0000 2009
>Closed-Date:    Wed Apr 15 11:48:17 +0000 2009
>Last-Modified:  Thu Apr 23 17:50:01 +0000 2009
>Originator:     YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>
>Release:        NetBSD 5.99.10
>Organization:

>Environment:


System: NetBSD kaeru 5.99.10
Architecture: i386
Machine: i386
>Description:

	1. run ./build.sh -j128 on nfs.
	2. it locks up with a lot of LWPs blocking on sysctl_treelock.
	3. enter into ddb by sending a break and found that an LWP with
	   the following backtrace is doing something too long (or infinitely)
	   with the lock held.  the request is NET_RT_IFLIST.

db{0}> t
trap() at netbsd:trap+0xb57
--- trap (number 6) ---
copyout(4,bbb58000,0,1,0,d7f9e5e0,1012bec,c049e48e,bbb5f000,d73cd228) at netbsd:
copyout+0x33
sysctl_rtable(dbda2ca8,3,bb82d000,dbda2ccc,0,0,dbda2c9c,dbd09ce0,c4cb7800,c05a2a
20) at netbsd:sysctl_rtable+0xbe
sysctl_dispatch(dbda2c9c,6,bb82d000,dbda2ccc,0,0,dbda2c9c,dbd09ce0,c4cb7800,d8fa
2444) at netbsd:sysctl_dispatch+0xcf
sys___sysctl(dbd09ce0,dbda2d00,dbda2d28,bbb5b000,d8fa2444,d8fa2444,db894c0c,bfbf
e780,6,bb82d000) at netbsd:sys___sysctl+0xd6
syscall(dbda2d48,b3,ab,1f,1f,0,806a6c8,bfbfe708,bbba21d8,6) at netbsd:syscall+0x
cb
db{0}> 

>How-To-Repeat:
	see above.
>Fix:


>Release-Note:

>Audit-Trail:
From: YAMAMOTO Takashi <yamt@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41202 CVS commit: src/sys/kern
Date: Wed, 15 Apr 2009 11:44:20 +0000

 Module Name:	src
 Committed By:	yamt
 Date:		Wed Apr 15 11:44:20 UTC 2009

 Modified Files:
 	src/sys/kern: kern_synch.c

 Log Message:
 kpreempt: report a failure of cpu_kpreempt_enter.  otherwise x86 trap()
 loops infinitely.  PR/41202.


 To generate a diff of this commit:
 cvs rdiff -u -r1.261 -r1.262 src/sys/kern/kern_synch.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: yamt@NetBSD.org
State-Changed-When: Wed, 15 Apr 2009 11:48:17 +0000
State-Changed-Why:
fixed.


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41202 CVS commit: [netbsd-5] src/sys/kern
Date: Thu, 23 Apr 2009 17:47:13 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Thu Apr 23 17:47:13 UTC 2009

 Modified Files:
 	src/sys/kern [netbsd-5]: kern_synch.c

 Log Message:
 Pull up following revision(s) (requested by yamt in ticket #720):
 	sys/kern/kern_synch.c: revision 1.262
 kpreempt: report a failure of cpu_kpreempt_enter.  otherwise x86 trap()
 loops infinitely.  PR/41202.


 To generate a diff of this commit:
 cvs rdiff -u -r1.254.2.5 -r1.254.2.6 src/sys/kern/kern_synch.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.