kpreempt: report a failure of cpu_kpreempt_enter.  otherwise x86 trap() loops infinitely.  PR/41202.